# CrunchCord

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml
src/: clipboard.cpp  clipboard.h  compressor.cpp  compressor.h  dialogs.cpp  dialogs.h  ffmpeg_setup.cpp  ffmpeg_setup.h  main.cpp  process.cpp  process.h  shellreg.cpp  shellreg.h
tools/: cli_test.cpp  ffsetup_test.cpp
